[package]
name = "leptos-signals"
license = "MIT"
repository = "https://github.com/akesson/leptos-signals"
categories = ["web-programming"]
keywords = ["leptos"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.0"

[features]
stable = ["leptos/stable"]
