[package]
name = "leptos-signals"
license = "MIT"
description = "Various signals for Leptos"
repository = "https://github.com/akesson/leptos-signals"
categories = ["web-programming"]
keywords = ["leptos"]
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_reactive = { version = "0.0", default-features = false }

[features]
stable = ["leptos_reactive/stable"]
